@@ -1,4 +1,4 @@
-Sun May  1 12:31:55 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
+Sun May  1 17:31:55 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Added support for dependencies in makefiles.
 
@@ -8,6 +8,8 @@ Sun May  1 12:31:55 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Added -p option to Autodist.  It can be used to a process file
 	  from the command line.
+
+	* Added dependency support for configure.ad files as well.
 
 Sat Apr 30 17:49:05 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
